<resources>
    <string name="app_name">Never Forget</string>

    <string name="grudge_title_hint">Enter a title for the grudge</string>
    <string name="grudge_title_label">Title</string>
    <string name="grudge_details_label">Details</string>
    <string name="grudge_remind_label">Remind me</string>
    <string name="grudge_revenge_label">Revenge</string>
    <string name="date_picker_title">Date of grudge:</string>
    <string name="new_grudge">New Grudge</string>
    <string name="show_subtitle">Show Amount</string>
    <string name="hide_subtitle">Hide Amount</string>
    <string name="subtitle_format">%1$d grudges</string>
    <string name="grudge_forgiven_text">Forgiven but not forgotten</string>
    <string name="grudge_choose_victim_button_text">Offender\'s name</string>
    <string name="grudge_send_grudge_button_text">Send grudge</string>
    <string name="grudge_message_format">%1$s, I hold a grudge on you. %2$s on %3$s at %4$s. %5$s</string>
    <string name="grudge_delete">Delete</string>
    <string name="send_report">Send grudge report via</string>
    <string name="grudge_report_subject">Grudge Report</string>
    <string name="grudge_forgiven_report">But I forgive you :)</string>
    <string name="grudge_not_forgiven_report">I don\'t forgive you :(</string>
    <string name="grudge_to_the_first_button">To the first</string>
    <string name="grudge_to_the_last_button">To the last</string>
    <string name="grudge_descrip_hint_text">Describe it vividly to remember better</string>
    <string name="grudge_forgive_checkbox">Forgive</string>
    <string name="explanation_default_message">It\'ll do you good</string>
    <string name="explanation_default_title">We need power</string>
    <string name="explanation_photo_and_storage_message">This will allow you to take and save a photo to remember your grudge more vividly</string>
    <string name="explanation_photo_and_storage_title">Allow access to take and save photos?</string>
    <string name="explanation_sms_message">This will allow you to send grudges to your offenders by SMS and other services</string>
    <string name="explanation_sms_title">Allow access to send messages?</string>
    <string name="grudge_description">You were mean to me</string>
    <string name="grudge_description_female">you were mean to me</string>
    <string name="gender_female">female</string>
    <string name="gender_male">male</string>
    <string name="victim_gender_title">Offender\'s gender</string>
    <string name="victims_name_hint">Enter offenders\'s name</string>
    <string name="ok_button_text">OK</string>
    <string name="cancel_button_text">CANCEL</string>
    <string name="time_of_grudge">Time of grudge:</string>
    <string name="grudge_information">Information</string>
    <string name="no_name_string">You didn\'t enter the offenders name</string>
    <string name="info_1">1. Write the description in a sentence starting with \'You\' as you would tell it to your offender. That will help to form a good looking Grudge report. And remember the less curse words now equals less regrets later :)</string>
    <string name="info_2">2. Tap on the photo to zoom in</string>
    <string name="info_3">3. In english version gender doesn\'t change anything in the grudge report</string>
    <string name="info_4">4. There\'s no preview of the grudge report yet. But we promise you that there\'s nothing rude :)</string>
    <string name="info_5">5. Swipe left or right to switch between grudges</string>
    <string name="info_6">6. To delete the photo click and hold it till a dialog box appears</string>
    <string name="info_7">7. Enjoy and Never Forget! :)</string>
    <string name="default_name">Extremely mean person</string>
    <string name="revenged_text">Revenged</string>
    <string name="forgiven_question">Are you sure?</string>
    <string name="enter_the_name">Enter the name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
