<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".view.VictimChooserDialogFragment">


    <EditText
        android:id="@+id/victim_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:hint="@string/victims_name_hint"
        android:inputType="textCapSentences|textMultiLine" />

    <Button
        android:id="@+id/victim_ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/victim_name_edit_text"
        android:text="@string/ok_button_text" />

    <Button
        android:id="@+id/victim_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/victim_name_edit_text"
        android:text="@string/cancel_button_text" />

    <Switch
        android:id="@+id/gender_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/victim_ok_button"
        android:layout_centerHorizontal="true"
        android:checked="true"
        android:text="@string/gender_female"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/gender_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/victim_name_edit_text"
        android:layout_centerHorizontal="true"
        android:text="@string/victim_gender_title"
        android:textSize="12sp" />

</RelativeLayout>