<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/grudge_scroll_view">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".controller.GrudgeFragment"
        android:orientation="vertical"
        android:id="@+id/fragment_grudge_relative_layout"
        android:padding="16dp">


        <TextView
            android:id="@+id/grudge_text_view"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/grudge_image_view"
            android:layout_alignParentRight="true"
            android:text="@string/grudge_title_label" />

        <EditText
            android:id="@+id/grudge_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/grudge_title_hint"
            android:inputType="textCapSentences|textMultiLine"
            android:layout_toEndOf="@+id/grudge_image_view"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/grudge_text_view"/>

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:id="@+id/grudge_description_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grudge_details_label"
            android:layout_below="@id/grudge_photo_button" />

        <EditText
            android:id="@+id/grudge_description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="100"
            android:hint="@string/grudge_descrip_hint_text"
            android:inputType="textCapSentences|textMultiLine"
            android:layout_below="@id/grudge_description_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/grudge_button_layout"
            android:layout_below="@+id/grudge_description_text">

            <Button
                android:id="@+id/grudge_date_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/grudge_time_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/grudge_button_layout"
            android:id="@+id/checkbox_layout">
            <CheckBox
                android:id="@+id/grudge_remind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/grudge_remind_label"
                android:layout_below="@id/grudge_button_layout"
                android:visibility="invisible"/>

            <CheckBox
                android:id="@+id/grudge_revenge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/grudge_remind"
                android:text="@string/grudge_revenge_label"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/grudge_forgive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/grudge_revenge"
                android:text="@string/grudge_forgive_checkbox"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />

        </LinearLayout>


        <TextView
            android:id="@+id/grudge_forgiven_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox_layout"
            android:text="@string/forgiven_question"
            android:textColor="@android:color/background_light"
            android:textStyle="bold|italic"
            android:visibility="invisible" />

        <Button
            android:id="@+id/grudge_victim_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grudge_choose_victim_button_text"
            android:layout_below="@id/grudge_forgiven_text"/>

        <Button
            android:id="@+id/grudge_send_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grudge_send_grudge_button_text"
            android:layout_below="@id/grudge_victim_button" />

        <ImageView
            android:id="@+id/grudge_image_view"
            android:layout_width="80dp"
            android:layout_height="89dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="fitXY"
            android:layout_margin="5dp"
            android:src="@android:drawable/progress_indeterminate_horizontal" />

        <ImageButton
            android:id="@+id/grudge_photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/grudge_image_view"
            android:src="@android:drawable/ic_menu_camera" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/grudge_button_layout"
            android:layout_toEndOf="@+id/checkbox_layout"
            android:visibility="invisible"/>

        <CheckBox
            android:id="@+id/grudge_revenged"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox"
            android:layout_toEndOf="@+id/checkbox_layout"
            android:enabled="false"
            android:text="@string/revenged_text"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />
    </RelativeLayout>
</ScrollView>